Fix menu z-index

--- a/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/Nav/_MainMenu.scss
+++ b/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/Nav/_MainMenu.scss
@@ -20,7 +20,7 @@
 		position: absolute;
 		left: -1px;
 		right: -1px;
-		z-index: 1;
+		z-index: 2;
 		padding: $u 1.5*$u;
 
 		display: none;
